スケジュール管理アプリの完成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
     <title>ScheduleApp1</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <header>
+      <h1>スケジュール管理アプリ</h1>
+    </header>
     <%= yield %>
+    <footer>
+    </footer>
   </body>
 </html>
